<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Routine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_copy">Copy Subject</string>
    <string name="action_stopPaste">Stop Pasting</string>
    <string name="action_clearData">Clear All Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_exportData">Export Data</string>
    <string name="action_importData">Import Data</string>
    <string name="action_chooseCustomColor">Custom Color</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_saveItem">Save</string>
    <string name="text_dataModified">Some data have been changed. Do you want to save?</string>
    <string name="title_dialog_file_chooser">Choose File</string>
    <string name="title_activity_add_to_list">Edit Subject</string>
    <string name="title_activity_color_choose">Choose Color</string>
    <string name="buttonText_customColor">Custom Color</string>
    <string name="title_activity_custom_color_chooser">Choose Custom Color</string>
    <string name="title_activity_settings">Settings</string>    
    <string name="title_activity_about">About My Routine</string>
    <string name="text_size_title">Text Size</string>
    <string name="centeringX_title">Text CenteringX Offset</string>
    <string name="centeringY_title">Text CenteringY Offset</string>
    <string name="textLineGap_title">Text Line Gap</string>
    <string name="fileNamePickerTitle">Enter File Name</string>
    <string name="fileNameHint">MyRoutineData</string>

    <string-array name="textSizeTextsArray">

        <!--
	    <item >0</item>
	    <item >1</item>
	    <item >2</item>
	    <item >3</item>
	    <item >4</item>
	    <item >5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        -->
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <!--
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        -->
    </string-array>
    <string-array name="centeringOffsetValueArray">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="lineGapValueArray">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>

</resources>
