<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Rahat.myroutine.MainActivity" >

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_copy"/>
    
    <item
        android:id="@+id/action_stopPaste"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_stopPaste"/>
    
    <item
        android:id="@+id/action_clearData"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clearData"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>
